--- a/home.html
+++ b/home.html
@@ -89,9 +89,8 @@
                 <hr />
                 <p class="card-text text-truncate">
                   With supporting text below as a natural lead-in to additional
-                  content.
-                </p>
-                <a href="#" class="btn btn-outline-warning">View</a>
+                  content.</p>                                  
+                    <a href="#" class="btn btn-outline-warning text-center">View</a>
               </div>
             </div>
           </div>
