--- a/list.html
+++ b/list.html
@@ -73,13 +73,20 @@
               <div class="row justify-content-center">
                 <div class="col-md-5 col-sm-6 col-md-12 col-lg-12 mb-3">
                   <div class="card border-success">
+                    <p class="card-header p-1 bg-success text-white text-center fs-6 fw-bold">ID : <span class="fw-bold"> 2424</span>            
+                    </p>
                     <div class="card-body">
                       <h5 class="card-title fs-4 text-wrap">Special title treatment</h5>
                       <hr />
                       <p class="card-text fs-6">
                         With supporting text below as a natural lead-in to additional
-                        content.
                       </p>
+                      <p class="card-text fs-6">Status : <span class="text-success fw-bold"> Completed</span>            
+                      </p>
+                      <div class="card-group">
+                        <p class="fw-light">Assigned :<br><span class="fw-medium">2132533</span></p>
+                        <p class="fw-light">Modified :<br><span class="fw-medium">46474558</span></p>
+                      </div>
                       <div class="function-btns">
                         <a href="#" class="btn btn-outline-warning ps-4 pe-4"><i class="fa-sharp fa-solid fa-pencil"></i></a>
                         <a href="#" class="btn btn-outline-danger ps-4 pe-4"><i class="fa-sharp fa-solid fa-trash-can"></i></a>
@@ -91,18 +98,24 @@
             </div>
           </div>
           <div class="col-sm-6 col-lg-4 col-md-6">
-            <h4 class="column-title-2 text-white p-2 bg-warning"><i class="fa-solid fa-triangle-exclamation"></i> Inprogress</h4>
+            <h4 class="column-title-2 text-white p-2 bg-warning"><i class="fa-solid fa-triangle-exclamation"></i> In progress</h4>
             <div class="container task-list">
               <div class="row justify-content-center">
                 <div class="col-md-5 col-sm-6 col-md-12 col-lg-12 mb-3">
                   <div class="card border-warning">
+                    <p class="card-header p-1 bg-warning text-white text-center fs-6 fw-bold">ID : <span class="fw-bold"> 2424</span>            
                     <div class="card-body">
                       <h5 class="card-title fs-4 text-wrap">Special title treatment</h5>
                       <hr />
                       <p class="card-text fs-6">
                         With supporting text below as a natural lead-in to additional
-                        content.
                       </p>
+                      <p class="card-text fs-6">Status : <span class="text-warning fw-bold"> In Progress</span>            
+                      </p>
+                      <div class="card-group">
+                        <p class="fw-light">Assigned :<br><span class="fw-medium">2132533</span></p>
+                        <p class="fw-light">Modified :<br><span class="fw-medium">46474558</span></p>
+                      </div>
                       <div class="function-btns">
                         <a href="#" class="btn btn-outline-warning ps-4 pe-4"><i class="fa-sharp fa-solid fa-pencil"></i></a>
                         <a href="#" class="btn btn-outline-danger ps-4 pe-4"><i class="fa-sharp fa-solid fa-trash-can"></i></a>
@@ -119,13 +132,19 @@
               <div class="row justify-content-center">
                 <div class="col-md-5 col-sm-6 col-md-12 col-lg-12 mb-3">
                   <div class="card border-danger">
+                    <p class="card-header p-1 bg-danger text-white text-center fs-6 fw-bold">ID : <span class="fw-bold"> 2424</span>
                     <div class="card-body">
                       <h5 class="card-title fs-4 text-wrap">Special title treatment</h5>
                       <hr />
                       <p class="card-text fs-6">
                         With supporting text below as a natural lead-in to additional
-                        content.
                       </p>
+                      <p class="card-text fs-6">Status : <span class="text-danger fw-bold"> Pending</span>            
+                      </p>
+                      <div class="card-group">
+                        <p class="fw-light">Assigned :<br><span class="fw-medium">2132533</span></p>
+                        <p class="fw-light">Modified :<br><span class="fw-medium">46474558</span></p>
+                      </div>
                       <div class="function-btns">
                         <a href="#" class="btn btn-outline-warning ps-4 pe-4"><i class="fa-sharp fa-solid fa-pencil"></i></a>
                         <a href="#" class="btn btn-outline-danger ps-4 pe-4"><i class="fa-sharp fa-solid fa-trash-can"></i></a>
