--- a/addTask.html
+++ b/addTask.html
@@ -57,7 +57,7 @@
                 <a class="nav-link" href="./list.html">List</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Search</a>
+                <a class="nav-link" href="./search.html">Search</a>
               </li>
             </ul>
           </div>
