--- a/list.html
+++ b/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>To-Do List Application</title>
+    <title>All Your Tasks </title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
