--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>To-Do List Application</title>
+    <title>Search The Task</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
